Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.0
-
None
-
Windows 7 64-bit
-
Memory leak: e4becdc3d310a0dd1a6d34d0796a52b21dedeb2d (dev, 1.7.2014, 5.4)
Description
I stumbled across the fact, that QListWidget with several items in it and internal move activated, increments its children count every time you move an item to another place.
Attached a simple example of that behaviour.
Attachments
Issue Links
- resulted in
-
QTBUG-43436 REG [5.3-5.4] XCB: Drag Drop to other application doesn't work
-
- Closed
-
For Gerrit Dashboard: QTBUG-39651 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
87664,2 | Move deletion of the QDrag object into QDragManager::drag(). | dev | qt/qtbase | Status: MERGED | +2 | 0 |