Move deletion of the QDrag object into QDragManager::drag().

The QDrag objects were apparently leaking on all platforms
other than XCB.

Task-number: QTBUG-39651
Change-Id: I09efcd250c1f42eb385e9d5779be7af6b9b59376
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>

cregit: e4becdc3d310a0dd1a6d34d0796a52b21dedeb2d https://github.com/qt/qtbase/commit/e4becdc3d310a0dd1a6d34d0796a52b21dedeb2d